# wallet

./: .env  .gitignore  conftest.py  docker_compose.tests.yml  docker_compose.yml  main.py  pyproject.toml  start-tests.sh  tests.Dockerfile
api/: users.py
core/: __init__.py
core/categories/: api.py  exceptions.py  models.py  repository.py  schemas.py
core/categories/tests/: test_create.py
core/managers/: users.py
core/schemas/: users.py
core/settings/: db.py
core/transactions/: models.py
core/users/: api.py  models.py  services.py
migrations/: env.py
migrations/versions/: f0e369183184_.py  f22525a15eff_init.py
services/: repository.py
settings/: auth.py  common.py  db.py
