[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["back7 <back7@dev.lan>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
alembic = "^1.8.0"
asyncpg = "^0.26.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.1"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
