[tool.poetry]
name = "wallet"
version = "0.1.0"
description = ""
authors = ["back7 <back7@dev.lan>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
SQLAlchemy = "^2.0.19"
alembic = "^1.8.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
pytest = "^7.1.2"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
